# badge_hip

./: .gitignore  CMakeLists.txt  README.md
libcicada/: CMakeLists.txt  libcicada.c  libcicada.h  libcicada.pio  main.c
src/: CMakeLists.txt  badge_defs.h  badge_pinout.h  badge_secsea.h  image2epaper.py
src/btns/: CMakeLists.txt  btns.c  btns.h
src/leds/: CMakeLists.txt  leds.c  leds.h  ws2812.pio
src/log/: CMakeLists.txt  log.c  log.h  log_nolog.c
src/music/: CMakeLists.txt  compute_notes.py  music.c  music.h
src/noise_gen/: CMakeLists.txt  noise_gen.c  noise_gen.h  noise_gen.pio
src/radio/: CMakeLists.txt  radio.c  radio.h
src/screen/: CMakeLists.txt  screen.c  screen.h
src/template/: CMakeLists.txt  template.c  template.h
src/tests/: CMakeLists.txt  btns.c  image2epaper.py  leds.c  log.c  music.c  noise_gen.c  radio.c  radio_calibrate.c  radio_calibrate.py  screen.c  template.c  tests.h
src/tests/imgs/: gen_hip.py  hip_4g.png~
workshop-01/: README.md
